<resources>
    <string name="app_name">JbossApp</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="contributors">Contributors</string>
    <string name="contributions">Contributions:</string>
    <string name="an_error_occurred">An error occurred! :(</string>
    <string name="try_again">Try again</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="people_contributing">people have contributed to this repository</string>
    <string name="no_license">No license</string>
    <string name="main_description">The list of repositories under JBoss Outreach organization is
    displayed here. You can click on it to see more details about particular repository.</string>
    <string name="top_contributors">Top contributors</string>
    <string name="top_contributors_description">These guys contributed the most</string>
    <string name="contributors_description">All awesome people who helped to develop and maintain this project.</string>
    <string name="overview">Overview</string>
</resources>
